--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,15 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/toastr/build/toastr.min.css",
-              "node_modules/ngf-bootstrap/dist/bootstrap.min.css",
+              "./node_modules/toastr/build/toastr.min.css",
+              "./node_modules/ngf-bootstrap/dist/bootstrap.min.css",
               // "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/toastr/build/toastr.min.js"
-              // "node_modules/ngf-bootstrap/dist/js/bootstrap.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/toastr/build/toastr.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
